--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,93 +1,134 @@
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?attr/theme_backgroundColor">
+    android:layout_height="match_parent">
 
-    <!-- Header -->
-    <LinearLayout
-        android:id="@+id/header_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="?attr/theme_cardColor">
+    <!-- Main content -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/theme_backgroundColor">
 
-
-        <!-- Title -->
-        <TextView
-            android:id="@+id/title_text"
+        <!-- Header -->
+        <LinearLayout
+            android:id="@+id/header_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/str_home"
-            android:textColor="?attr/theme_backgroundColor"
-            android:textSize="24sp"
-            android:fontFamily="@font/bai_jamjuree" />
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="?attr/theme_cardColor">
 
-        <ImageButton
-            android:id="@+id/menu_toggle"
+            <!-- Title -->
+            <TextView
+                android:id="@+id/title_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/str_home"
+                android:textSize="24sp"
+                android:fontFamily="@font/bai_jamjuree"
+                android:textColor="?attr/theme_backgroundColor"/>
+
+            <ImageButton
+                android:id="@+id/menu_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_gravity="center_vertical"
+                android:src="?attr/theme_icon_menu"
+                android:contentDescription="@string/str_home"
+                android:background="@android:color/transparent" />
+        </LinearLayout>
+
+        <!-- Pinner & Title -->
+        <LinearLayout
+            android:id="@+id/pinner_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:layout_gravity="center_vertical"
-            android:src="?attr/theme_icon_menu"
-            android:contentDescription="@string/str_home"
-            android:background="@android:color/transparent" />
-    </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/header_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            android:gravity="center_horizontal" >
 
-    <!-- Pinner & Title -->
-    <LinearLayout android:id="@+id/pinner_layout"
-        android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/str_course"
+                android:textSize="24sp"
+                android:textColor="?attr/theme_text"
+                android:fontFamily="@font/bai_jamjuree"
+                android:textAlignment="center"/>
+
+            <Spinner android:id="@+id/course_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:gravity="center"
+                android:entries="@array/course_options"
+                android:paddingBottom="4dp"
+                />
+        </LinearLayout>
+
+        <!-- RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/pinner_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="30dp"
+            android:layout_marginHorizontal="30dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Drawer content -->
+    <LinearLayout
+    android:id="@+id/drawer_content"
+    android:layout_width="230dp"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="?attr/theme_cardColor"
+    android:gravity="center"
+    android:layout_gravity="end">
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/header_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical"
-        android:gravity="center_horizontal" >
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="exitApp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="?attr/theme_icon_exit"
+            android:layout_margin="8dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/str_course"
-            android:textSize="24sp"
-            android:textColor="?attr/theme_text"
+            android:text="@string/str_exit_btn"
+            android:textSize="20sp"
             android:fontFamily="@font/bai_jamjuree"
-
-            android:textAlignment="center"/>
-
-        <Spinner android:id="@+id/course_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            android:entries="@array/course_options"
-            android:paddingBottom="4dp"
-
-            />
+            android:textColor="?attr/theme_backgroundColor"
+            android:layout_margin="8dp" />
     </LinearLayout>
+</LinearLayout>
 
-    <!-- RecyclerView -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/pinner_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="30dp"
-         />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
